# solana-token-sale

./: README_CONTRACT
client/: .example-env  package-lock.json  package.json
client/src/: account.ts  burnNft.ts  buyToken.ts  claim.ts  closeTokenSale.ts  index.ts  reset-token.ts  setup.ts  stake.ts  stakeToken.ts  startTokenSale.ts  util.ts  utils.ts  withdraw.ts
contract/: Cargo.toml
contract/src/: error.rs  instruction.rs  processor.rs  state.rs
