[package]
name = "solana-bpf-boilerplate"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "=1.17.7"
thiserror = "^1.0.56"
spl-token = {version = "4.0", features = ["no-entrypoint"]}
arrayref = "0.3.6"
ahash = "=0.8.6"
# solana-frozen-abi = "=1.17.7"
# zeroize = "^1.6.0"

[lib]
crate-type = ["cdylib", "lib"]


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]